bk_ida/gccida/c2/general_operand
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/general_operand/src/recog.c:1379:31: error: must use 'enum' tag to refer to type 'machine_mode'
int  general_operand( rtx op, machine_mode mode) 
                              ^
                              enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/general_operand/src/recog.c:1382:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v3; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/general_operand/src/recog.c:1394:39: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( ( v2 & 0xFF0000) == 0 && v3 && ( mode_class_0[v3] | 2) != 3 ) 
                                      ^~~~~~~~~~~~
                                      mode_class
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/general_operand/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/general_operand/src/recog.c:1435:4: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
|| mode_class_0[v3] == MODE_FLOAT && mode_size[v3] > mode_size[BYTE2( v2)] ) 
   ^~~~~~~~~~~~
   mode_class
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/general_operand/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/general_operand/src/recog.c:1451:53: error: use of undeclared identifier 'machine_mode'
&& ( *( _WORD *)v9 == 70 || legitimate_address_p( ( machine_mode)BYTE2( v2), v9, 0)) ) 
                                                    ^
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/general_operand/src/obj/recog.o] Error 1
